[gd_scene load_steps=49 format=2]

[ext_resource path="res://screens/crabs-village/game1-room/assets/astonished.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/crabs-village/game1-room/assets/crab.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/crabs-village/images/backgroundAndSand.png" type="Texture" id=3]
[ext_resource path="res://screens/crabs-village/game1-room/assets/algae.tscn" type="PackedScene" id=4]
[ext_resource path="res://screens/crabs-village/game1-room/see.png" type="Texture" id=5]
[ext_resource path="res://screens/crabs-village/game1-room/assets/raft.tscn" type="PackedScene" id=6]
[ext_resource path="res://screens/crabs-village/game1-room.gd" type="Script" id=7]
[ext_resource path="res://screens/crabs-village/game1-room/crab-ate-astonished.png" type="Texture" id=8]
[ext_resource path="res://common/themes/default.theme" type="Theme" id=9]
[ext_resource path="res://screens/crabs-village/game1-room/astonished-ate-algae.png" type="Texture" id=10]
[ext_resource path="res://screens/crabs-village/characters/welcome-boy/welcome-boy-idle.png" type="Texture" id=11]
[ext_resource path="res://common/ui/simpleDialog.tscn" type="PackedScene" id=12]

[sub_resource type="TileSet" id=1]
0/name = "backgroundAndSand.png 0"
0/texture = ExtResource( 3 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "backgroundAndSand.png 1"
1/texture = ExtResource( 3 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "backgroundAndSand.png 2"
2/texture = ExtResource( 3 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "backgroundAndSand.png 3"
3/texture = ExtResource( 3 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 32, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "backgroundAndSand.png 4"
4/texture = ExtResource( 3 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 32, 32, 32, 32 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "backgroundAndSand.png 5"
5/texture = ExtResource( 3 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 64, 32, 32, 32 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "backgroundAndSand.png 6"
6/texture = ExtResource( 3 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 0, 64, 32, 32 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "backgroundAndSand.png 7"
7/texture = ExtResource( 3 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 32, 64, 32, 32 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "backgroundAndSand.png 8"
8/texture = ExtResource( 3 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 64, 64, 32, 32 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="TileSet" id=2]
0/name = "see.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "see.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 32, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "see.png 2"
2/texture = ExtResource( 5 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 64, 0, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0

[sub_resource type="Animation" id=3]
resource_name = "New Anim"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("raft:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 124.14, 89.4343 ), Vector2( 190.14, 89.4343 ) ]
}

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 8 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 8 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 8 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 8 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 8 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 8 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 640, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 704, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 768, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 10 )
region = Rect2( 320, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 10 )
region = Rect2( 448, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 10 )
region = Rect2( 576, 0, 64, 32 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 10 )
region = Rect2( 640, 0, 64, 32 )

[sub_resource type="SpriteFrames" id=29]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 11 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 11 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 11 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 11 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 11 )
region = Rect2( 160, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=36]
animations = [ {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="game1-room" type="Node2D"]
script = ExtResource( 7 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 4, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 4, 0, 9, 5, 0, 65536, 3, 0, 65537, 4, 0, 65538, 4, 0, 65539, 4, 0, 65540, 4, 0, 65541, 4, 0, 65542, 4, 0, 65543, 4, 0, 65544, 4, 0, 65545, 5, 0, 131072, 3, 0, 131073, 4, 0, 131074, 4, 0, 131075, 4, 0, 131076, 4, 0, 131077, 4, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 5, 0, 196608, 3, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 5, 0, 262144, 3, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 5, 0, 327680, 3, 0, 327681, 4, 0, 327682, 7, 0, 327683, 7, 0, 327684, 7, 0, 327685, 7, 0, 327686, 7, 0, 327687, 7, 0, 327688, 4, 0, 327689, 5, 0 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 2 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( 2, 0, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 2, 0, 65538, 0, 0, 65539, 1, 0, 65540, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 2, 0, 131074, 0, 0, 131075, 1, 0, 131076, 1, 0, 131077, 1, 0, 131078, 1, 0, 131079, 2, 0, 196610, 0, 0, 196611, 1, 0, 196612, 1, 0, 196613, 1, 0, 196614, 1, 0, 196615, 2, 0, 262146, 0, 0, 262147, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 2, 0, 327682, 0, 0, 327683, 1, 0, 327684, 1, 0, 327685, 1, 0, 327686, 1, 0, 327687, 2, 0 )

[node name="raft" parent="." instance=ExtResource( 6 )]
position = Vector2( 190.14, 89.4343 )

[node name="crab" parent="." instance=ExtResource( 2 )]
position = Vector2( 41.9796, 35.3552 )

[node name="astonished" parent="." instance=ExtResource( 1 )]
position = Vector2( 44.0497, 141.493 )

[node name="algae" parent="." instance=ExtResource( 4 )]
position = Vector2( 45.3846, 86.7646 )

[node name="crabRight" parent="." instance=ExtResource( 2 )]
position = Vector2( 266.3, 35.3735 )

[node name="astonishedRight" parent="." instance=ExtResource( 1 )]
position = Vector2( 261.628, 143.495 )

[node name="algaeRight" parent="." instance=ExtResource( 4 )]
position = Vector2( 266.967, 91.4364 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 3 )

[node name="colorGameOver" type="ColorRect" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crabAteAstonished" type="AnimatedSprite" parent="colorGameOver"]
visible = false
position = Vector2( 158.178, 92.7712 )
scale = Vector2( 2.62683, 2.62683 )
frames = SubResource( 17 )

[node name="restart" type="Button" parent="colorGameOver"]
margin_left = 82.0925
margin_top = 158.846
margin_right = 202.092
margin_bottom = 178.846
theme = ExtResource( 9 )
text = "Re-commencer ?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="astonishedAteAlgae" type="AnimatedSprite" parent="colorGameOver"]
visible = false
position = Vector2( 171.527, 89.7678 )
scale = Vector2( 3.18997, 3.18997 )
frames = SubResource( 29 )

[node name="Label" type="Label" parent="colorGameOver"]
margin_left = 68.7441
margin_top = 7.3416
margin_right = 149.744
margin_bottom = 21.3416
rect_scale = Vector2( 2.08, 2.08 )
theme = ExtResource( 9 )
text = "Game Over"

[node name="ColorStart" type="ColorRect" parent="."]
visible = false
margin_right = 320.0
margin_bottom = 194.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="ColorStart"]
position = Vector2( 141.493, 62.7374 )
scale = Vector2( 3.46111, 3.46111 )
frames = SubResource( 36 )

[node name="simpleDialogStart" parent="ColorStart" instance=ExtResource( 12 )]

[node name="ColorWin" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 192.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite2" type="AnimatedSprite" parent="ColorWin"]
position = Vector2( 141.493, 62.7374 )
scale = Vector2( 3.46111, 3.46111 )
frames = SubResource( 36 )

[node name="simpleDialogWin" parent="ColorWin" instance=ExtResource( 12 )]

[connection signal="goLeft" from="raft" to="." method="_on_raft_goLeft"]
[connection signal="goRight" from="raft" to="." method="_on_raft_goRight"]
[connection signal="selected" from="raft" to="." method="_on_raft_selected"]
[connection signal="selected" from="crab" to="." method="_on_crab_selected"]
[connection signal="selected" from="astonished" to="." method="_on_astonished_selected"]
[connection signal="selected" from="algae" to="." method="_on_algae_selected"]
[connection signal="selected" from="crabRight" to="." method="_on_crabRight_selected"]
[connection signal="selected" from="astonishedRight" to="." method="_on_astonishedRight_selected"]
[connection signal="selected" from="algaeRight" to="." method="_on_algaeRight_selected"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_finished" from="colorGameOver/crabAteAstonished" to="." method="_on_crabAteAstonished_animation_finished"]
[connection signal="button_down" from="colorGameOver/restart" to="." method="_on_restart_button_down"]
[connection signal="animation_finished" from="colorGameOver/astonishedAteAlgae" to="." method="_on_astonishedAteAlgae_animation_finished"]
[connection signal="discussionFinished" from="ColorStart/simpleDialogStart" to="." method="_on_simpleDialogStart_discussionFinished"]
[connection signal="discussionFinished" from="ColorWin/simpleDialogWin" to="." method="_on_simpleDialogWin_discussionFinished"]
